--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,6 @@
         <app></app>
     </div>
     <!--<script src="./lib/vendor.bundle.js"></script>-->
-	<script src="./lib/app.js"></script>
+	<script src="./app.js"></script>
 </body>
 </html>
